--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,30 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+
+    <!-- Антон Логвиненко -->
+    <include src="./partials/hero-header.html"></include>
+
+    <!-- Lesya V -->
+    <include src="./partials/products.html"></include>
+
+    <!-- Olena Topor -->
+    <include src="./partials/about.html"></include>
+    <include src="./partials/advantages.html"></include>
+
+    <!-- Костянтин Заболотній -->
+    <include src="./partials/gallery.html"></include>
+
+    <!-- Dmytro Siechnyi -->
+    <include src="./partials//customer-reviews.html"></include>
+
+    <!-- Victoriia Slobodeniuk -->
+    <include src="./partials/contacts.html"></include>
+
+    <!-- Лариса Мельниченко -->
+    <include src="./partials/footer.html"></include>
+
+    <!-- Ivan Kasich -->
+    <include src="./partials/modal.html"></include>
   </body>
 </html>
