--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Seymour+One&display=swap"
       rel="stylesheet"
-    >
-    
+    />
+
+    <!-- Favicon text -->
+    <title>ice Cream</title>
+
+    <!-- Бібліотека Animate css -->
+    <link rel="stylesheet" href="./libs/animate/animate.css" />
+    <link rel="stylesheet" href="./libs/owl-carousel/owl.carousel.min.css" />
+    <link
+      rel="stylesheet"
+      href="./libs/owl-carousel/owl.theme.default.min.css"
+    />
+
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -43,5 +54,10 @@
 
     <!-- Ivan Kasich -->
     <include src="./partials/modal.html"></include>
+
+    <!-- Скріпти -->
+    <script src="./libs/jquery/jquery-2.1.3.min.js"></script>
+    <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
+    <script src="./js/reviews.js"></script>
   </body>
 </html>
