--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+
+    <!-- Favicon text -->
+    <title>Ice Team</title>
+
+    <!-- Бібліотека Animate css -->
+    <link rel="stylesheet" href="./libs/animate/animate.css" />
+    <link rel="stylesheet" href="./libs/owl-carousel/owl.carousel.min.css" />
+    <link rel="stylesheet" href="./libs/owl-carousel/owl.theme.default.min.css" />
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
