--- a/src/index.html
+++ b/src/index.html
@@ -51,5 +51,10 @@
 
     <!-- Ivan Kasich -->
     <include src="./partials/modal.html"></include>
+
+    <!-- Скріпти -->
+    <script src="./libs/jquery/jquery-2.1.3.min.js"></script>
+    <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
+    <script src="./JS/reviews.js"></script>
   </body>
 </html>
