--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,6 @@
     <!-- Скріпти -->
     <script src="./libs/jquery/jquery-2.1.3.min.js"></script>
     <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
-    <script src="./JS/reviews.js"></script>
+    <script src="./js/reviews.js"></script>
   </body>
 </html>
