--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon text -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon_package/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon_package/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon_package/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./images/favicon_package/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./images/favicon_package/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <title>Ice Team</title>
 
     <!-- Бібліотека Animate css -->
     <link rel="stylesheet" href="./libs/animate/animate.css" />
     <link rel="stylesheet" href="./libs/owl-carousel/owl.carousel.min.css" />
-    <link rel="stylesheet" href="./libs/owl-carousel/owl.theme.default.min.css" />
-    
+    <link
+      rel="stylesheet"
+      href="./libs/owl-carousel/owl.theme.default.min.css"
+    />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
