--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
     <!-- Бібліотека Animate css -->
     <link rel="stylesheet" href="./libs/animate/animate.css" />
     <link rel="stylesheet" href="./libs/owl-carousel/owl.carousel.min.css" />
-    <link rel="stylesheet" href="./libs/owl-carousel/owl.theme.default.min.css" />
-    
+    <link
+      rel="stylesheet"
+      href="./libs/owl-carousel/owl.theme.default.min.css"
+    />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
