--- a/src/index.html
+++ b/src/index.html
@@ -84,5 +84,6 @@
     <script src="./libs/jquery/jquery-2.1.3.min.js"></script>
     <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
     <script src="./js/reviews.js"></script>
+    <script src="./js/modals.js"></script>
   </body>
 </html>
