Виправлено шлях до js

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
     <!-- Скріпти -->
     <script src="./libs/jquery/jquery-2.1.3.min.js"></script>
     <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
-    <script src="./js/reviews1.js"></script>
-    <script src="./js/modals1.js"></script>
+    <script src="./js/reviews.js"></script>
+    <script src="./js/modals.js"></script>
   </body>
 </html>
